fix: correct cyclonedx-py command syntax in SBOM generation
- Change from --environment flag to 'environment' command
- Fixes: cyclonedx-py error: invalid choice

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,7 +117,8 @@ jobs:
           pip install --no-deps .
           pip install -r requirements.txt
           # Generate SBOM from the current environment (production dependencies only)
-          cyclonedx-py --environment -o "dist/sbom-python-${{ steps.version.outputs.VERSION }}.cdx.json" --format json
+          # Note: cyclonedx-py requires 'environment' as a command, not a flag
+          cyclonedx-py environment -o "dist/sbom-python-${{ steps.version.outputs.VERSION }}.cdx.json" --format json
 
       - name: GPG-sign Python dists
         env:
