feat: improve OSSF Scorecard compliance
Priority Action Plan #1 & #2:
- Add release trigger to scorecards.yml to detect releases immediately
- Change scorecard cron schedule from weekly to daily (midnight UTC)
- Add top-level read-only permissions to 6 workflows for Token-Permissions check

Workflows updated:
- scorecards.yml: Added release trigger, daily cron, kept push trigger
- build.yml: Added top-level read-only permissions
- codeql.yml: Added top-level read-only permissions
- labeler.yml: Added top-level read-only permissions
- lint-code.yml: Added top-level read-only permissions
- lint-docs.yml: Added top-level read-only permissions
- sync-wiki.yml: Added top-level read-only permissions

Expected improvements:
- Signed-Releases: -1/10 → 10/10 (will detect releases on publish)
- Token-Permissions: 7/10 → 10/10 (all workflows now have top-level read-only)

See: https://github.com/ossf/scorecard/blob/main/docs/checks.md#token-permissions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,11 @@
 name: Build and Test
 
+# Top-level permissions set to read-only for OSSF Scorecard Token-Permissions check
+# See: https://github.com/ossf/scorecard/blob/main/docs/checks.md#token-permissions
+permissions:
+  contents: read
+  packages: read
+
 on:
   push:
     branches: [main, develop]
