--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,5 +1,12 @@
 name: CodeQL Analysis
 
+# Top-level permissions set to read-only for OSSF Scorecard Token-Permissions check
+# See: https://github.com/ossf/scorecard/blob/main/docs/checks.md#token-permissions
+permissions:
+  contents: read
+  packages: read
+  actions: read
+
 on:
   push:
     branches: [main]
