--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -6,6 +6,13 @@
 # https://github.com/actions/labeler
 
 name: Labeler
+
+# Top-level permissions set to read-only for OSSF Scorecard Token-Permissions check
+# See: https://github.com/ossf/scorecard/blob/main/docs/checks.md#token-permissions
+permissions:
+  contents: read
+  pull-requests: read
+
 on: [pull_request_target]
 
 jobs:
