--- a/.github/workflows/lint-code.yml
+++ b/.github/workflows/lint-code.yml
@@ -1,5 +1,10 @@
 name: Lint Code
 
+# Top-level permissions set to read-only for OSSF Scorecard Token-Permissions check
+# See: https://github.com/ossf/scorecard/blob/main/docs/checks.md#token-permissions
+permissions:
+  contents: read
+
 on:
   push:
     branches: [main, develop]
