feat: add container image metadata labels and annotations (#49)
Add OCI metadata to container images for GitHub Container Registry:
- Add LABEL instructions to Dockerfile for single-arch builds
- Add labels to docker/metadata-action for image metadata
- Add annotations to docker/build-push-action outputs for multi-arch images

This ensures the following metadata appears on GHCR package pages:
- Description: 'A secure SSH fleet orchestrator for MCP (STDIO transport)...'
- Source repository: Links package to GitHub repository
- License: Apache-2.0 displayed in Details sidebar

Fixes 'No description provided' issue on container package pages.

See: https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-container-registry#labelling-container-images

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -148,6 +148,10 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=raw,value=latest
+          labels: |
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.description=A secure SSH fleet orchestrator for MCP (STDIO transport). Enforces declarative policy and audited access for Claude Desktop, Cursor, and any MCP-aware client.
+            org.opencontainers.image.licenses=Apache-2.0
 
       - name: Build & push image
         id: build_image
@@ -161,6 +165,13 @@ jobs:
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
           provenance: true  # embed buildkit provenance in the image
+          # Add annotations for multi-arch image manifest (required for description to appear on GHCR)
+          outputs: |
+            type=image,
+            name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},
+            annotation-index.org.opencontainers.image.description=A secure SSH fleet orchestrator for MCP (STDIO transport). Enforces declarative policy and audited access for Claude Desktop, Cursor, and any MCP-aware client.,
+            annotation-index.org.opencontainers.image.source=https://github.com/${{ github.repository }},
+            annotation-index.org.opencontainers.image.licenses=Apache-2.0
 
       # --- Install cosign (keyless) ---
       - name: Install cosign
