--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,10 +10,8 @@ updates:
       interval: "weekly"
       day: "monday"
       time: "09:00"
-      timezone: "UTC"
+      timezone: "America/Detroit"
     open-pull-requests-limit: 10
-    reviewers:
-      - "samerfarida"
     assignees:
       - "samerfarida"
     commit-message:
@@ -38,10 +36,8 @@ updates:
       interval: "weekly"
       day: "monday"
       time: "09:00"
-      timezone: "UTC"
+      timezone: "America/Detroit"
     open-pull-requests-limit: 5
-    reviewers:
-      - "samerfarida"
     assignees:
       - "samerfarida"
     commit-message:
@@ -68,10 +64,8 @@ updates:
       interval: "weekly"
       day: "monday"
       time: "09:00"
-      timezone: "UTC"
+      timezone: "America/Detroit"
     open-pull-requests-limit: 3
-    reviewers:
-      - "samerfarida"
     assignees:
       - "samerfarida"
     commit-message:
@@ -80,3 +74,13 @@ updates:
     labels:
       - "dependencies"
       - "docker"
+    ignore:
+      # CRITICAL: Block Python 3.14+ updates
+      # MCP SDK (mcp>=1.21.0) officially supports only Python 3.10-3.13
+      # See: https://github.com/modelcontextprotocol/python-sdk
+      # TODO: Remove this ignore when MCP SDK adds official Python 3.14 support
+      - dependency-name: "python"
+        versions: [">=3.14.0"]
+      # Block major version bumps (would include 3.14, 3.15, etc.)
+      - dependency-name: "python"
+        update-types: ["version-update:semver-major"]
