fix: remove outputs parameter from Docker build step
The outputs parameter with annotation-index was causing 'invalid value' errors.
Labels are already set via metadata action and Dockerfile LABEL instructions,
which are sufficient for both individual images and multi-arch manifest index.

This should fix the release workflow build failure.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -165,14 +165,8 @@ jobs:
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
           provenance: true  # embed buildkit provenance in the image
-          # Add annotations for multi-arch image manifest (required for description to appear on GHCR)
-          # Note: Annotation values must not contain commas or special characters that conflict with parsing
-          outputs: |
-            type=image,
-            name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }},
-            annotation-index.org.opencontainers.image.description=A secure SSH fleet orchestrator for MCP (STDIO transport). Enforces declarative policy and audited access for Claude Desktop Cursor and MCP-aware clients,
-            annotation-index.org.opencontainers.image.source=https://github.com/${{ github.repository }},
-            annotation-index.org.opencontainers.image.licenses=Apache-2.0
+          # Labels are set via metadata action and Dockerfile - these will be applied to both
+          # the individual platform images and the multi-arch manifest index
 
       # --- Install cosign (keyless) ---
       - name: Install cosign
