--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,59 +1,69 @@
----
 name: Feature Request
-about: Suggest an idea for this project
-title: '[FEATURE] '
-labels: ['enhancement', 'needs-triage']
-assignees: ''
----
-
-## Feature Summary
-A clear and concise description of the feature you'd like to see implemented.
-
-## Problem Statement
-What problem does this feature solve? What use case does it address?
-
-## Proposed Solution
-Describe the solution you'd like to see implemented. Be as specific as possible.
-
-## Alternative Solutions
-Describe any alternative solutions or workarounds you've considered.
-
-## Use Cases
-Provide specific examples of how this feature would be used:
-
-### Example 1: [Use case name]
-```json
-{
-  "name": "ssh_example_tool",
-  "arguments": {
-    "param1": "value1",
-    "param2": "value2"
-  }
-}
-```
-
-### Example 2: [Use case name]
-```bash
-# Command line example
-docker run -i --rm mcp-ssh-orchestrator:latest
-```
-
-## Impact Assessment
-- **Who would benefit from this feature?** (e.g., DevOps teams, system administrators, developers)
-- **How many users might use this?** (e.g., small subset, most users, all users)
-- **Priority level**: [Low/Medium/High]
-
-## Implementation Considerations
-- **Complexity**: [Low/Medium/High]
-- **Breaking changes**: Does this require changes to existing APIs or configurations?
-- **Dependencies**: Are there any new dependencies required?
-- **Security implications**: Any security considerations?
-
-## Additional Context
-Add any other context, mockups, or examples about the feature request here.
-
-## Related Issues
-Link any related issues or discussions:
-- Related to #123
-- Blocked by #456
-- Duplicate of #789
+description: Suggest an idea for this project
+title: "[FEATURE] "
+labels:
+  - enhancement
+  - needs-triage
+body:
+  - type: markdown
+    attributes:
+      value: |
+        ## Help us scope your idea
+        Please describe the problem first, then the change you'd like to see. Tie everything back to existing MCP tools or YAML.
+  - type: textarea
+    id: summary
+    attributes:
+      label: Feature summary
+      description: One paragraph describing the capability you need.
+    validations:
+      required: true
+  - type: textarea
+    id: problem
+    attributes:
+      label: Problem statement
+      description: What workflow is blocked today? Who is impacted?
+      placeholder: We're unable to ...
+    validations:
+      required: true
+  - type: textarea
+    id: solution
+    attributes:
+      label: Proposed solution
+      description: Reference the MCP tool, prompt, or YAML file you expect will change.
+      placeholder: Update `ssh_plan` to return ...
+  - type: textarea
+    id: security
+    attributes:
+      label: Security alignment
+      description: Explain how this keeps the deny-by-default posture intact. List any new allow rules, network changes, or audit events required.
+  - type: textarea
+    id: alternatives
+    attributes:
+      label: Alternatives considered
+      description: Existing workarounds, even if imperfect.
+  - type: textarea
+    id: use-cases
+    attributes:
+      label: Representative use cases
+      description: Provide concrete command/tool examples that would benefit.
+      placeholder: |
+        1. Operator asks Cursor to ...
+        2. MCP client calls `ssh_run_on_tag ...`
+  - type: dropdown
+    id: priority
+    attributes:
+      label: Priority
+      options:
+        - Low
+        - Medium
+        - High
+  - type: textarea
+    id: implementation
+    attributes:
+      label: Implementation considerations
+      description: Complexity, dependencies, or breaking changes we should know about (transport must remain stdio-only).
+  - type: textarea
+    id: additional
+    attributes:
+      label: Additional context / references
+      description: Link related issues, designs, or screenshots.
