Security/fix command chaining bypass (#68)
* fix: Remove unused variable in fix-markdownlint.py

* fix: Remove unused code_block_lang variable

* chore: Update documentation, workflows, and examples

- Updated all wiki documentation files (markdownlint fixes)
- Updated GitHub workflows and issue templates
- Updated example configuration files
- Updated metadata.json and pyproject.toml
- Updated Dockerfile and compose files
- Updated validation scripts

Note: yamllint warnings are style-only (missing ---, line length) and don't affect functionality

--- a/.github/ISSUE_TEMPLATE/documentation_issue.yml
+++ b/.github/ISSUE_TEMPLATE/documentation_issue.yml
@@ -29,7 +29,7 @@ body:
         - label: docs/wiki (specify file below)
         - label: compose/README.md or setup.sh
         - label: examples/*.yml
-        - label: `.github` templates
+        - label: '.github templates'
         - label: Code comments/docstrings
         - label: Other (describe below)
   - type: textarea
