security: Pin all GitHub Actions and dependencies to commit SHAs/versions (#70)
- Pin 43 GitHub Actions to commit SHAs (replacing version tags)
- Pin pip to version 24.0 in all workflows and Dockerfile
- Pin npm package markdownlint-cli2 to version 0.19.0
- Fixes all 58 OSSF Scorecard Pinned-Dependencies alerts
- Expected Scorecard improvement: 1/10 → 10/10

All changes validated with:
- YAML syntax validation
- GitHub Actions parsing (act tool)
- SHA format and consistency checks
- Dependency version verification

Refs: OSSF Scorecard Pinned-Dependencies check

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -34,29 +34,29 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - language: actions
-          build-mode: none
-        - language: python
-          build-mode: none
+          - language: actions
+            build-mode: none
+          - language: python
+            build-mode: none
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v4
-      with:
-        languages: ${{ matrix.language }}
-        build-mode: ${{ matrix.build-mode }}
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@a293a9afd2b8a145f70242d88df6ea3113570be0 # v4
+        with:
+          languages: ${{ matrix.language }}
+          build-mode: ${{ matrix.build-mode }}
 
-    - name: Run manual build steps
-      if: matrix.build-mode == 'manual'
-      shell: bash
-      run: |
-        echo 'Manual build mode not supported for this project'
-        exit 1
+      - name: Run manual build steps
+        if: matrix.build-mode == 'manual'
+        shell: bash
+        run: |
+          echo 'Manual build mode not supported for this project'
+          exit 1
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v4
-      with:
-        category: "/language:${{matrix.language}}"
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@a293a9afd2b8a145f70242d88df6ea3113570be0 # v4
+        with:
+          category: "/language:${{matrix.language}}"
