--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,16 +28,16 @@ jobs:
     timeout-minutes: 15  # Prevent runaway test jobs
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
           python-version: "3.11"
 
       - name: Install deps
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install pip==24.0
           pip install -e ".[test]"
 
       - name: Tests
@@ -60,7 +60,7 @@ jobs:
       actions: read           # some actions read workflow run context
     steps:
       - name: Checkout (tag)
-        uses: actions/checkout@v4
+        uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4
         with:
           ref: ${{ github.ref }}
           fetch-depth: 0
@@ -90,13 +90,13 @@ jobs:
           gpg --armor --export "$KEY_ID" > dist/GPG-PUBLIC-KEY.asc
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
         with:
           python-version: "3.11"
 
       - name: Build Python dists
         run: |
-          python -m pip install --upgrade pip build
+          python -m pip install pip==24.0 build
           python -m build --sdist --wheel
 
       - name: Extract version
@@ -126,13 +126,13 @@ jobs:
 
       # --- Container build & push (with provenance from BuildKit) ---
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+        uses: docker/setup-qemu-action@c7c53464625b32c7a7e944ae62b3e17d2b600130 # v3
 
       - name: Set up Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435 # v3
 
       - name: Login to GHCR
-        uses: docker/login-action@v3
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -140,7 +140,7 @@ jobs:
 
       - name: Docker metadata
         id: meta
-        uses: docker/metadata-action@v5
+        uses: docker/metadata-action@318604b99e75e41977312d83839a89be02ca4893 # v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
@@ -155,7 +155,7 @@ jobs:
 
       - name: Build & push image
         id: build_image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@ca052bb54ab0790a636c9b5f226502c73d547a25 # v5
         with:
           context: .
           push: true
@@ -172,7 +172,7 @@ jobs:
 
       # --- Install cosign (keyless) ---
       - name: Install cosign
-        uses: sigstore/cosign-installer@v4.0.0
+        uses: sigstore/cosign-installer@faadad0cce49287aee09b3a48701e75088a2c6ad # v4.0.0
 
       # --- Keyless sign image (Fulcio/Rekor) ---
 
@@ -192,7 +192,7 @@ jobs:
       # Container SBOM is included in releases for OSSF Scorecard compliance
       - name: Generate SBOM with Trivy
         id: sbom
-        uses: aquasecurity/trivy-action@0.33.1
+        uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8 # 0.33.1
         continue-on-error: true  # Don't fail on vulnerabilities, just generate SBOM
         with:
           scan-type: 'image'
@@ -220,7 +220,7 @@ jobs:
       # --- SBOM attestation (bind SBOM -> image digest) via GitHub Artifact Attestations ---
       - name: Attest SBOM to image
         if: steps.move_sbom.outputs.SBOM_GENERATED == 'true'
-        uses: actions/attest-sbom@v3
+        uses: actions/attest-sbom@51e74621a501c89df81fc1391c5a8f4cfc9fab2f # v3
         with:
           subject-digest: ${{ steps.build_image.outputs.digest }}
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -229,7 +229,7 @@ jobs:
 
       # --- Build provenance attestation for the CONTAINER image (GitHub Artifact Attestations) ---
       - name: Attest build provenance (image)
-        uses: actions/attest-build-provenance@v3
+        uses: actions/attest-build-provenance@43d14bc2b83dec42d39ecae14e916627a18bb661 # v3
         with:
           subject-digest: ${{ steps.build_image.outputs.digest }}
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -367,7 +367,7 @@ jobs:
       # - Cosign bundles (*.sigstore) for provenance signatures
       # See: https://github.com/ossf/scorecard/blob/main/docs/checks.md#signed-releases
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
+        uses: softprops/action-gh-release@5be0e66d93ac7ed76da52eca8bb058f665c3a5fe # v2
         with:
           body: ${{ steps.changelog.outputs.CHANGELOG }}
           draft: false
