Update CodeQL SARIF upload action version

--- a/.github/workflows/scorecards.yml
+++ b/.github/workflows/scorecards.yml
@@ -76,6 +76,6 @@ jobs:
       # Upload the results to GitHub's code scanning dashboard (optional).
       # Commenting out will disable upload of results to your repo's Code Scanning dashboard
       - name: "Upload to code-scanning"
-        uses: github/codeql-action/upload-sarif@a293a9afd2b8a145f70242d88df6ea3113570be0 # v4
+        uses: github/codeql-action/upload-sarif@v4
         with:
           sarif_file: results.sarif
