feat: Add .env file support for consolidated secrets management (#72)
- Add support for consolidated .env file in secrets directory
- Maintain backward compatibility with individual secret files
- Implement caching with proper cache invalidation on missing files
- Add comprehensive security validations (permissions, size, symlinks)
- Support comments, quoted values, and values with = characters
- Update all documentation with .env file usage and examples
- Add 20 comprehensive tests covering all edge cases

Resolution order: env vars → .env file → individual files

Fixes cache initialization bug where missing files were cached as empty

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ known_hosts
 # Keep example files
 !examples/*.yml
 !examples/*.key.example
+!secrets/.env.example
 
 
 # Planning documents (not meant to be committed)
