--- a/examples/example-credentials.yml
+++ b/examples/example-credentials.yml
@@ -6,10 +6,12 @@
 # SECURITY NOTES:
 #   - Never commit real secrets to Git.
 #   - Mount your private keys into /app/keys (read-only) with chmod 0400.
-#   - Store passwords/passphrases as Docker secrets or env vars (see below).
+#   - Store passwords/passphrases as Docker secrets, .env file, or env vars (see below).
 #   - Secrets are resolved in the following order:
-#       1. Environment variable: MCP_SSH_SECRET_<NAME_IN_UPPERCASE>
-#       2. Docker secret file:   /app/secrets/<name>
+#       1. Direct environment variable (Docker MCP Gateway): <SECRET_NAME>
+#       2. Prefixed environment variable: MCP_SSH_SECRET_<NAME_IN_UPPERCASE>
+#       3. .env file: /app/secrets/.env (consolidated secrets file)
+#       4. Docker secret file: /app/secrets/<name>
 #
 # Fields:
 #   name                 : unique identifier referenced by servers.yml (required)
@@ -19,9 +21,16 @@
 #   key_passphrase_secret: secret name containing passphrase for encrypted key (optional)
 #
 # Example secret setup:
+#   # Option 1: Using .env file (recommended for consolidated management)
+#   echo "prod_admin_passphrase=super-secret" >> secrets/.env
+#   chmod 600 secrets/.env
+#
+#   # Option 2: Individual secret files (Docker secrets compatible)
 #   echo "super-secret" > secrets/prod_admin_password.txt
 #   docker secret create prod_admin_password secrets/prod_admin_password.txt
-#   export MCP_SSH_SECRET_PROD_ADMIN_PASSWORD=super-secret   # optional env alternative
+#
+#   # Option 3: Environment variable
+#   export MCP_SSH_SECRET_PROD_ADMIN_PASSWORD=super-secret
 
 entries:
   # Production automation account using Ed25519 key (recommended)
